# excalibur

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  excalibur.cabal  excalibur.yaml  flake.nix  shell.nix  strictdoc.toml
doc/: grammar.sgra  requirements.sdoc
src/: Checks.hs  Main.hs  Types.hs  Util.hs
src/Checks/: CommandCheck.hs  FileCheck.hs  GlobalCheck.hs
src/Types/: Base.hs  Check.hs  CheckReport.hs  CheckResult.hs
src/Types/Check/: CommandCheck.hs  FileCheck.hs  GlobalCheck.hs
src/Util/: ExpandVariables.hs  ResolveCommitRange.hs  ResolvePaths.hs  RunCommand.hs  TempCopy.hs
