cabal-version:       2.2

name:                excalibur
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/irockasingranite/excalibur#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sarah Renkhoff
maintainer:          sarah.renkhoff@gmail.com
copyright:           2025 Sarah Renkhoff
category:            Development
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable excalibur
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Checks,
                       Checks.CommandCheck,
                       Types,
                       Types.Base,
                       Types.Check,
                       Types.Check.CommandCheck,
                       Types.CheckResult,
                       Util,
                       Util.TempCopy
                        
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       aeson-pretty,
                       bytestring,
                       directory,
                       dlist,
                       exceptions,
                       filepath,
                       mtl,
                       lens,
                       optparse-applicative,
                       scientific,
                       temporary,
                       text,
                       transformers,
                       typed-process,
                       unordered-containers,
                       yaml
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
